--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intl": "^6.3.2",
+    "styled-components": "^5.3.9",
     "typescript": "5.0.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-styling": "^0.3.2",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
@@ -37,6 +39,7 @@
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.11",
     "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
