--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "incremental": true,
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "types": ["vitest/globals"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.{test,spec}-d.{ts,js}", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
